# ascender-microservices

./: .gitignore  bootstrap.py  pyproject.toml  settings.py
ascender_ms/_core/: registry.py
ascender_ms/abc/: aiodriver.py
ascender_ms/common/kafka/: consume.py  consumer.py  context.py
ascender_ms/drivers/aiokafka/: driver.py
ascender_ms/exceptions/: connection_not_found.py
ascender_ms/modules/: provider.py
ascender_ms/modules/kafka/: asc_kafka_module.py  batch_builder.py  kafka_consumer_service.py  kafka_global_service.py  kafka_producer_service.py  use_connection.py
ascender_ms/validation/: utils.py
ascender_ms/validation/strategies/: general.py
controllers/: controllers_module.py  main_controller.py
controllers/app/: app_controller.py  app_module.py  app_service.py
controllers/test_consume/: consume_controller.py  consume_module.py
controllers/test_global/: consume_controller.py  consume_module.py
examples/: connection.py  provide_connection.py
